chore: renames packages

--- a/packages/library-a/package.json
+++ b/packages/library-a/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lib/foo",
+  "name": "@packages/foo",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
