--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "packages:test": "pnpm test --filter '@packages/*'",
+    "packages:build": "pnpm build --filter '@packages/*'"
   },
   "author": "",
   "license": "MIT",
@@ -12,5 +13,9 @@
     "esbuild": "^0.13.12",
     "esbuild-jest": "^0.5.0",
     "jest": "^27.3.1"
+  },
+  "devDependencies": {
+    "jest-esbuild": "^0.2.0",
+    "typescript": "^4.4.2"
   }
 }
