--- a/packages/library-a/package.json
+++ b/packages/library-a/package.json
@@ -8,16 +8,7 @@
     "build": "node ./build.js",
     "prebuild": "rimraf dist && tsc -p tsconfig.json --noEmit",
     "test": "jest --config=../../jest.config.js",
+    "clean": "rimraf ./dist",
     "watch": "node ./build.js --watch"
-  },
-  "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "esbuild": "^0.12.24",
-    "esbuild-plugin-d.ts": "^1.0.6",
-    "estrella": "^1.4.1",
-    "jest": "^27.1.0",
-    "jest-esbuild": "^0.2.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.4.2"
   }
 }
